# SBB

./: Cargo.toml  README.md
bench/: benchmark_bloom_size.sh  benchmark_fixed_geometry.sh  benchmark_hash_count.sh  benchmark_random_queries.sh  benchmark_single_ref_accuracy.sh  benchmark_single_ref_baseline.sh  benchmark_single_ref_scaling.sh  benchmark_single_ref_sweep.sh  common.sh  download_realistic_microbes.sh  gen_dataset.py  generate_reads_from_reference.py  generate_single_ref_mixed_reads.py  plot_single_ref_accuracy.py  plot_single_ref_baseline.py  plot_single_ref_scaling.py  plot_single_ref_sweep.py  run_sbb_only.sh  run_side_by_side.sh  sbbFPplot.py  sbbtimeplot.py
src/: bloom.rs  bloomybloom_adapter.rs  bloomybloom_vendor.rs  classify.rs  fastx.rs  lib.rs  writer.rs
tests/: bloom_layout_equivalence.rs  bloom_math.rs  format_roundtrip.rs  input_compression_formats.rs  kmer_iterator_edges.rs  maker_cli_validation.rs  progressive_mode.rs
tests/common/: mod.rs
