[package]
name = "biobloom-rs"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
name = "biobloom_rs"
path = "src/lib.rs"

[[bin]]
name = "sbb"
path = "src/bin/sbb.rs"

[[bin]]
name = "sbbbenchgen"
path = "src/bin/sbbbenchgen.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
flate2 = "1.1.9"
needletail = "0.6.3"
rayon = "1.11.0"

[dev-dependencies]
tempfile = "3.25.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
