[package]
name = "biobloom-rs"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
name = "biobloom_rs"
path = "src/lib.rs"

[[bin]]
name = "sbb"
path = "src/bin/sbb.rs"

[[bin]]
name = "sbbbenchgen"
path = "src/bin/sbbbenchgen.rs"

[[bin]]
name = "sbbbenchrand"
path = "src/bin/sbbbenchrand.rs"

[dependencies]
anyhow = "1.0.101"
bit-vec = "0.8.0"
clap = { version = "4.5.58", features = ["derive"] }
flate2 = "1.1.9"
helicase = { git = "https://github.com/imartayan/helicase.git", package = "helicase", rev = "bcd21a92617c79145c4d96e154f7dad7c7e6a7f4", default-features = false, features = ["gz", "zstd", "xz", "bz2"] }
packed-seq = "4.4.2"
rand = "0.9.2"
rayon = "1.11.0"
seq-hash = "0.1.2"
simd-minimizers = "2.3.1"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[dev-dependencies]
bzip2 = "0.4.4"
liblzma = "0.4.5"
tempfile = "3.25.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
